@@ -13,6 +13,9 @@ summary: Conozca las ventajas y los riesgos de cada versión de ONTAP antes de a
 [role="lead"]
 Es muy importante comparar y comprender las ventajas y los riesgos que se asocian con la versión de destino de ONTAP antes de actualizar la versión de ONTAP para el sistema de almacenamiento.
 
+.Rol de BlueXP requerido:
+Administrador de la organización, administrador de carpetas o proyectos, administrador de almacenamiento o especialista en estado del sistema. link:https://docs.netapp.com/us-en/bluexp-setup-admin/reference-iam-predefined-roles.html["Obtenga más información sobre los roles de acceso de BlueXP."^]
+
 Puede elegir la versión de destino y compararla con la versión actual para comprender las ventajas de actualizar a la versión específica en ONTAP. También puede ver los riesgos que se resolverán y los nuevos riesgos (si los hay) que surgirán al actualizar a la versión específica de ONTAP.
 
 
@@ -47,7 +50,7 @@ Desea elegir otra versión
 . Seleccione la versión para ver los beneficios de la función Beneficios y Riesgos.
 . Seleccione y vea información sobre los riesgos que se resolverán, el riesgo que seguirá existiendo y los nuevos riesgos que se introducirán después de la actualización.
 . Opcionalmente, haga clic en *Descargar plan de actualización* para descargar una copia del plan de actualización.
-. Haga clic en *Iniciar actualización* para iniciar el proceso de actualización.
+. Seleccione *Iniciar actualización* para iniciar el proceso de actualización.
 
 
 |===
