@@ -13,6 +13,9 @@ summary: Actualice su sistema de almacenamiento de ONTAP para aprovechar las fun
 [role="lead"]
 Una vez que haya identificado la versión de destino de ONTAP, solucionado y confirmado todos los bloqueadores, ahora podrá iniciar la actualización de su sistema de almacenamiento de ONTAP.
 
+.Rol de BlueXP requerido:
+Administrador de la organización, administrador de carpetas o proyectos, administrador de almacenamiento o especialista en estado del sistema. link:https://docs.netapp.com/us-en/bluexp-setup-admin/reference-iam-predefined-roles.html["Obtenga más información sobre los roles de acceso de BlueXP."^]
+
 .Pasos
 . En el menú de navegación de la izquierda de BlueXP , selecciona *Estado > Actualizaciones de software*.
 +
