@@ -23,15 +23,10 @@
   <block id="7d73325ccb71b4870e81c3c8734ba56e" category="paragraph">Después de identificar la versión de destino de ONTAP para el sistema de almacenamiento de ONTAP, debe corregir y reconocer todos los bloqueadores y revisar las advertencias antes de actualizar el sistema de almacenamiento de ONTAP.</block>
   <block id="2458f462c36fbeec4b6536099135f298" category="paragraph">La corrección y el reconocimiento de todos los bloqueadores es obligatorio y garantiza un proceso de actualización de software sin fisuras.</block>
   <block id="a710a4a4b33a19ce9678b290e8622101" category="paragraph">Se muestra la lista de clústeres que necesitan actualizar el software.</block>
-  <block id="06cd15ffbdad395f54961af4b4da3f7d" category="list-text">Una vez que haya decidido la versión de destino de ONTAP, haga clic en *Preparar para la actualización* para iniciar el proceso de actualización.</block>
   <block id="921328cf9f5d7f1029ee8f2b5eb6add6" category="paragraph">Se muestra la lista de bloqueadores y advertencias.</block>
   <block id="0d3e45ea704fa7abdf905562392b0203" category="list-text">Seleccione el bloqueador para ver las instrucciones para corregir el bloqueador.</block>
   <block id="8aa655b81ac9a54174b8b2f3c0e078b3" category="list-text">Realice manualmente los pasos proporcionados para corregir el bloqueador.</block>
-  <block id="dd65b396655e879f1cc555905f551ba9" category="list-text">Seleccione los bloqueadores que se han corregido y haga clic en *Reconocer seleccionado* para confirmar que los bloqueadores se han corregido.</block>
   <block id="deef003c349019061441ab60dd6ecf90" category="admonition">Debe corregir y confirmar todos los bloqueadores para continuar con la actualización.</block>
-  <block id="f00541528c969eb6abe8cce5f5281ccc" category="list-text">Haga clic en la pestaña *Advertencias* para revisar las advertencias antes de continuar con la actualización de software.</block>
-  <block id="3a49822934e3057e70050398c92aa888" category="list-text">Haga clic en la pestaña *Reconocer* para ver los bloqueadores que se han corregido.</block>
-  <block id="5143d195cc41390e0e4722e37a8b670d" category="list-text">Haga clic en *Continuar para actualizar* para continuar con el proceso de actualización.</block>
   <block id="0fd40a88a795a27afa35dc3e7dbce97c" category="summary">Actualice su sistema de almacenamiento de ONTAP para aprovechar las funciones nuevas y mejoradas.</block>
   <block id="ef54c6082f1b8fb3ea432a9b7cdce377" category="doc">Completar la actualización del sistema de almacenamiento de ONTAP</block>
   <block id="84159d0a25239d2d4573172d023c46e7" category="list-text">Lea y acepte el contrato de licencia para usuario final.</block>
@@ -51,7 +46,6 @@
   <block id="24958f1bc0c9e80abac7daea72c06854" category="list-text">En el menú de navegación de la izquierda de BlueXP , selecciona *Estado &gt; Actualizaciones de software.*</block>
   <block id="20b41c007263bf3cb834352319595be6" category="summary">Revise los requisitos previos y los requisitos antes de continuar con la actualización de ONTAP.</block>
   <block id="7efc4f28b854970100677afdf18e3743" category="paragraph">Para usar las actualizaciones de software de BlueXP , debe asegurarse de que su entorno cumpla todos los requisitos.</block>
-  <block id="f79a5712ad4df34137efe352ad13262f" category="list-text">El Privileges de administrador está disponible para realizar una actualización de software mediante System Manager.</block>
   <block id="0a97d1300ce9361165541c64b6bd10b7" category="list-text">Las credenciales de administrador están disponibles para el clúster deseado mientras se ejecuta la actualización de software.</block>
   <block id="b34cd7f587984e9b254885f6d8640801" category="list-text">Todos los nodos del clúster envían datos AutoSupport.</block>
   <block id="27eb16a8f5038a8a66d0aec86d022bbd" category="list-text">Todos los nodos deben ejecutarse en ONTAP 9,10 o versiones posteriores.</block>
@@ -151,8 +145,6 @@
   <block id="9d06990508d25d367d9158c6558eb9c8" category="list-text"><block ref="9d06990508d25d367d9158c6558eb9c8" category="inline-link-macro-rx"></block></block>
   <block id="7450cfde7058dc5e1f7909d0280fd7ae" category="inline-link-macro">Azure NetApp Files</block>
   <block id="2e0c742f4616eb27b5b7646aa790edfe" category="list-text"><block ref="2e0c742f4616eb27b5b7646aa790edfe" category="inline-link-macro-rx"></block></block>
-  <block id="b0cee72642f5457a71ddd0b49efb6d93" category="inline-link-macro">Cloud Volumes Service para Google Cloud</block>
-  <block id="cf14bff66a8b72d3675db8ffe0f02ee3" category="list-text"><block ref="cf14bff66a8b72d3675db8ffe0f02ee3" category="inline-link-macro-rx"></block></block>
   <block id="3880ae5df9fdc4d0fc4a6d00a2239530" category="paragraph">Para recibir soporte técnico específico sobre BlueXP y sus soluciones y servicios de almacenamiento, use las opciones de soporte descritas a continuación.</block>
   <block id="edd15fbeb7b2dffa163336ecd4f3e80c" category="section-title">Utilice opciones de soporte automático</block>
   <block id="5e4b821a1a82558dead1ef6961e90666" category="paragraph">Estas opciones están disponibles de forma gratuita, las 24 horas del día, los 7 días de la semana:</block>
@@ -308,7 +300,6 @@
   <block id="33871b6190a8d5adbe8b15282054766c" category="sidebar">Novedades</block>
   <block id="0adc03eac86772ad2c75c8f140be417e" category="sidebar">Conocimiento y apoyo</block>
   <block id="e9286f8f31c5b4b57dc1c4b27396c2bf" category="paragraph">Esto se debe a la versión de ONTAP actual y a la falta de disponibilidad del conector BlueXP  para los clústeres. Un conector BlueXP  realiza la actualización de ONTAP en BlueXP  y no requiere que salga de BlueXP  para una actualización. Si no dispone de un conector de BlueXP , se le redirigirá a System Manager y se le pedirá volver a introducir las credenciales del clúster de ONTAP. Para obtener información sobre el proceso de actualización de ONTAP para diferentes versiones de ONTAP, consulte <block ref="9368a1ed7fc94ef1fa0dd54dc646113b" category="inline-link-macro-rx"></block>.</block>
-  <block id="7fd857a6ab8e5cb6d32815d3414ad1f1" category="list-text">Hay una organización de BlueXP  disponible.</block>
   <block id="6e3e90ee630b7faf0d6dad037bbd177a" category="list-text">Un entorno de trabajo se configura en BlueXP .</block>
   <block id="98d90e398fc56688ddc647e5f49075ec" category="paragraph">La lista de entornos de trabajo está dentro del ámbito de la organización (o cuenta) de BlueXP , el proyecto (o el espacio de trabajo) y el conector que ha seleccionado en el banner superior del servicio.</block>
   <block id="29360bfcdbc91d3f1514c372b4585965" category="list-text">Registro del número de serie de su cuenta de BlueXP  (número de serie 960xxxxxxxxx de 20 dígitos que se encuentra en la página de recursos de soporte de BlueXP ).</block>
@@ -344,4 +335,20 @@
   <block id="f50a226c5a51111405309ae78236d95d" category="doc">Reducción de riesgos</block>
   <block id="66fa090892a2bd81c896ab6fbf156b19" category="paragraph">En la sección de resumen de las actualizaciones de software de BlueXP , ahora puede ver el número total de riesgos que se pueden mitigar mediante la actualización del sistema operativo. Esto permite a los usuarios evaluar las mejoras de seguridad y estabilidad en su base de instalación.</block>
   <block id="47388f68695ab5799ff2adfb33bca00d" category="section-title">02 de abril de 2025</block>
+  <block id="eb41c324559b969116f2a7d0e5a512c7" category="paragraph-title">Rol de BlueXP requerido:</block>
+  <block id="fd3b9b6f969e334605ecb2deacbd84cc" category="inline-link-macro">Obtenga más información sobre los roles de acceso de BlueXP.</block>
+  <block id="4de48b1d25f387ca4892d8634f62973e" category="paragraph">Administrador de la organización, administrador de carpetas o proyectos, administrador de almacenamiento o especialista en estado del sistema. <block ref="6677d2bbecb9c8fe39d4645334e442a8" category="inline-link-macro-rx"></block></block>
+  <block id="0fdb0ceffdc4d2d2cdb1f927a8e4bbe5" category="list-text">Seleccione *Iniciar actualización* para iniciar el proceso de actualización.</block>
+  <block id="33ba4cda6895a31680b2de36d86dab15" category="list-text">Una vez que haya decidido la versión de destino de ONTAP , seleccione *Preparar para actualización* para iniciar el proceso de actualización.</block>
+  <block id="6a9157b81110d193ae9726acd434a73b" category="list-text">Seleccione los bloqueadores que se han corregido y seleccione *Reconocer seleccionados* para reconocer que esos bloqueadores se han corregido.</block>
+  <block id="f1bceb312606e73e3fc3cb05ba0db012" category="list-text">Seleccione la pestaña *Advertencias* para revisar las advertencias antes de continuar con la actualización del software.</block>
+  <block id="185674eb1bcbdcee59090d2a4854c5bd" category="list-text">Seleccione la pestaña *Reconocer* para ver los bloqueadores que se han solucionado.</block>
+  <block id="46ab049c063b4859793fe4d01b477a97" category="list-text">Seleccione *Continuar actualizando* para continuar con el proceso de actualización.</block>
+  <block id="b6f64caf7d0bc5014c5dc5b478d3b150" category="paragraph">Administrador de la organización, administrador de carpeta o proyecto, administrador de almacenamiento, visor de almacenamiento o especialista en estado del sistema. <block ref="6677d2bbecb9c8fe39d4645334e442a8" category="inline-link-macro-rx"></block></block>
+  <block id="1da5a40083bd16c3443e7eda42875506" category="doc">Se necesita el rol de acceso a BlueXP</block>
+  <block id="53dafb5a873d00157d780f773c016fed" category="paragraph">Ahora necesita uno de los siguientes roles de acceso para instalar actualizaciones de software: *Administrador de la organización*, *Administrador de carpetas o proyectos*, *Administrador de almacenamiento*, *Visor de almacenamiento* o *Especialista en estado de almacenamiento*. Los usuarios con el rol de Visor de almacenamiento tienen varios permisos relacionados con las actualizaciones de software, pero no pueden instalarlas. <block ref="5f4605f8f9a6dca73fc40e564cf6fcbc" category="inline-link-macro-rx"></block></block>
+  <block id="0a7ea76c19ce14ea769fa96b38086400" category="paragraph">También debe tener uno de los siguientes roles de acceso: administrador de organización, administrador de carpeta o proyecto, o administrador de almacenamiento.</block>
+  <block id="e48502083eb8949c8f65b2ccddd5adec" category="section-title">12 de mayo de 2025</block>
+  <block id="1215f8190533dfdf63d2224a6d88266f" category="inline-link-macro">NetApp Volumes para Google Cloud</block>
+  <block id="cb4bf32603c89d08cad17e7e7dd302f2" category="list-text"><block ref="cb4bf32603c89d08cad17e7e7dd302f2" category="inline-link-macro-rx"></block></block>
 </blocks>
